--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,12 @@
             <version>${dropwizard.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.dropwizard</groupId>
+            <artifactId>dropwizard-client</artifactId>
+            <version>${dropwizard.version}</version>
+        </dependency>
+
         <!-- Tests Cucumber -->
 
         <dependency>
