--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,11 @@
 ---
 
-morphiaDatastore:
-  uri: "mongodb://192.168.99.100/reports?connectTimeoutMS=5000&socketTimeoutMS=90000&w=majority&journal=true&wtimeoutMS=60000"
+mongoUri: "mongodb://192.168.99.100/reports?connectTimeoutMS=5000&socketTimeoutMS=90000&w=majority&j=true&wtimeoutMS=60000"
+
+selfUrl: "http://localhost:8080"
+
+logging:
+  level: INFO
+
+  loggers:
+    "example": DEBUG
