--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,7 @@ dependencies {
 
     compile "io.dropwizard:dropwizard-core:${versions.dropwizard}"
     compile "io.dropwizard:dropwizard-client:${versions.dropwizard}"
+    compile "io.dropwizard:dropwizard-metrics-graphite:${versions.dropwizard}"
     compile "ma.glasnost.orika:orika-core:${versions.orika}"
     compile "org.mongodb.morphia:morphia:${versions.morphia}"
     compile "org.slf4j:slf4j-api:${versions.slf4j}"
