--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,9 @@
----
+server:
+  type: default
+  minThreads:  12
+  maxThreads: 48
+  maxQueuedRequests: 2048
+  idleThreadTimeout: 10 seconds
 
 mongoUri: "mongodb://192.168.99.100/reports?connectTimeoutMS=5000&socketTimeoutMS=90000&w=majority&j=true&wtimeoutMS=60000"
 
@@ -9,3 +14,11 @@ logging:
 
   loggers:
     "example": DEBUG
+
+metrics:
+  frequency: 1 minute
+  reporters:
+    - type: graphite
+      host: 192.168.99.100
+      port: 2003
+      prefix: tests-cucumber
