--- a/build.gradle
+++ b/build.gradle
@@ -1,115 +1,120 @@
 buildscript {
 
-}
-
-repositories {
-
-    mavenLocal()
-    mavenCentral()
-
-}
-
-
-apply plugin: 'idea'
-apply plugin: 'java'
-apply plugin: 'jdepend'
-apply plugin: 'groovy'
-apply plugin: 'application'
-
-
-// apply plugin: 'jacoco'
-// apply plugin: 'pmd'
-// apply plugin: 'findbugs'
-
-
-project.sourceCompatibility = '1.8'
-
-
-group = 'org.example.rest-app'
-version = new File("${rootDir}/VERSION.txt").text.trim()
-
-sourceSets {
-
-    cucumber {
-        groovy {
-            srcDirs = ['src/cucumber/groovy']
+    repositories {
+        maven {
+            url "https://plugins.gradle.org/m2/"
         }
     }
 
-}
-
-
-ext.versions = [
-        dropwizard: '0.9.1',
-        orika: '1.4.5',
-        morphia: '1.0.1',
-        slf4j: '1.7.12',
-        assertj: '3.2.0',
-        spring: '4.2.3.RELEASE',
-]
-
-
-dependencies {
-
-    compile "io.dropwizard:dropwizard-core:${versions.dropwizard}"
-    compile "io.dropwizard:dropwizard-client:${versions.dropwizard}"
-    compile "io.dropwizard:dropwizard-metrics-graphite:${versions.dropwizard}"
-    compile "ma.glasnost.orika:orika-core:${versions.orika}"
-    compile "org.mongodb.morphia:morphia:${versions.morphia}"
-    compile "org.slf4j:slf4j-api:${versions.slf4j}"
-    compile "org.springframework:spring-context:${versions.spring}"
-
-    testCompile "org.assertj:assertj-core:${versions.assertj}"
-
-    cucumberCompile 'org.codehaus.groovy:groovy-all:2.4.5'
-    cucumberCompile 'info.cukes:cucumber-groovy:1.2.4'
-    cucumberCompile "org.slf4j:slf4j-api:${versions.slf4j}"
-    cucumberCompile "org.assertj:assertj-core:${versions.assertj}"
+    dependencies {
+        classpath "com.moowork.gradle:gradle-grunt-plugin:0.11"
+    }
 
 }
 
 
-compileJava {
-    options.encoding = "UTF-8"
-    options.deprecation = true
-    options.compilerArgs << "-parameters"
+allprojects {
+
+    group = 'org.example.tests-cucumber'
+    version = new File("${rootDir}/VERSION.txt").text.trim()
+
+    apply plugin: 'idea'
+
+    repositories {
+        mavenLocal()
+        mavenCentral()
+    }
+
 }
 
 
-jdependMain {
-    reports {
-        text {
+project("${rootProject.name}-backend") {
+
+    apply plugin: 'java'
+    apply plugin: 'groovy'
+    // apply plugin: 'application'
+
+    project.sourceCompatibility = '1.8'
+
+    sourceSets {
+
+        cucumber {
+            groovy {
+                srcDirs = ['src/cucumber/groovy']
+            }
         }
-    }
-}
-
-
-idea {
-
-    module {
-
-        scopes.COMPILE.plus += [configurations.cucumberCompile, configurations.cucumberRuntime]
 
     }
 
-}
-
-
-task runCucumber(type: JavaExec) {
-
-    classpath = sourceSets.cucumber.runtimeClasspath
-
-    main = 'cucumber.api.cli.Main'
-
-    args += [
-            '--plugin',
-            'pretty',
-            '--glue',
-            'classpath:example',
-            '--plugin',
-            'html:build/cucumber/html',
-            '--plugin',
-            'json:build/cucumber/report.json',
-            'src/cucumber/features',
+    ext.versions = [
+            dropwizard: '0.9.1',
+            orika     : '1.4.5',
+            morphia   : '1.0.1',
+            slf4j     : '1.7.12',
+            assertj   : '3.2.0',
+            spring    : '4.2.3.RELEASE',
     ]
+
+    dependencies {
+
+        compile "io.dropwizard:dropwizard-core:${versions.dropwizard}"
+        compile "io.dropwizard:dropwizard-client:${versions.dropwizard}"
+        compile "io.dropwizard:dropwizard-metrics-graphite:${versions.dropwizard}"
+        compile "ma.glasnost.orika:orika-core:${versions.orika}"
+        compile "org.mongodb.morphia:morphia:${versions.morphia}"
+        compile "org.slf4j:slf4j-api:${versions.slf4j}"
+        compile "org.springframework:spring-context:${versions.spring}"
+
+        testCompile "org.assertj:assertj-core:${versions.assertj}"
+
+        cucumberCompile 'org.codehaus.groovy:groovy-all:2.4.5'
+        cucumberCompile 'info.cukes:cucumber-groovy:1.2.4'
+        cucumberCompile "org.slf4j:slf4j-api:${versions.slf4j}"
+        cucumberCompile "org.assertj:assertj-core:${versions.assertj}"
+
+    }
+
+    compileJava {
+        options.encoding = "UTF-8"
+        options.deprecation = true
+        options.compilerArgs << "-parameters"
+    }
+
+    idea {
+
+        module {
+            scopes.COMPILE.plus += [configurations.cucumberCompile, configurations.cucumberRuntime]
+        }
+    }
+
+    task runCucumber(type: JavaExec) {
+
+        classpath = sourceSets.cucumber.runtimeClasspath
+
+        main = 'cucumber.api.cli.Main'
+
+        args += [
+                '--plugin',
+                'pretty',
+                '--glue',
+                'classpath:example',
+                '--plugin',
+                'html:build/cucumber/html',
+                '--plugin',
+                'json:build/cucumber/report.json',
+                'src/cucumber/features',
+        ]
+    }
+
+}
+
+
+project("${rootProject.name}-ui") {
+
+    apply plugin: 'com.moowork.grunt'
+
+    task build(dependsOn: 'grunt_build') {
+
+    }
+
 }
