--- a/.editorconfig
+++ b/.editorconfig
@@ -7,15 +7,16 @@ root = true
 
 [*]
 
-# Change these settings to your own preference
 indent_style = space
 indent_size = 2
 
-# We recommend you to keep these unchanged
 end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
+
+[*.java]
+indent_size = 4
 
 [*.md]
 trim_trailing_whitespace = false
