Séparation des exemples du code du backend

--- a/settings.gradle
+++ b/settings.gradle
@@ -2,3 +2,4 @@ rootProject.name = 'tests-cucumber'
 
 include "${rootProject.name}-backend"
 include "${rootProject.name}-ui"
+include "${rootProject.name}-example-features"
