--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ sudo: false
 jdk:
   - oraclejdk8
 
-before_install: ./gradlew nodeSetup npmInstall
+before_install: ./gradlew nodeSetup npmInstall installGrunt
