--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,6 @@ sudo: false
 jdk:
   - oraclejdk8
 
-before_install: ./gradlew nodeSetup npmInstall installGrunt
+before_install:
+  - cd tests-cucumber-ui && bower install
+  - ./gradlew nodeSetup npmInstall installGrunt
