Installation Bower et Grunt

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,6 @@ jdk:
   - oraclejdk8
 
 before_install:
+  - npm install -g grunt bower
   - cd tests-cucumber-ui && bower install
   - ./gradlew nodeSetup npmInstall installGrunt
