--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ jdk:
   - oraclejdk8
 
 before_install:
+  - gem install compass
   - npm install -g grunt bower
   - "(cd tests-cucumber-ui && bower install)"
   - ./gradlew nodeSetup npmInstall installGrunt
