--- a/tests-cucumber-backend/backend-config.yml
+++ b/tests-cucumber-backend/backend-config.yml
@@ -13,10 +13,10 @@ logging:
   loggers:
     "example": DEBUG
 
-metrics:
-  frequency: 1 minute
-  reporters:
-    - type: graphite
-      host: 192.168.99.100
-      port: 2003
-      prefix: tests-cucumber
+# metrics:
+#   frequency: 1 minute
+#   reporters:
+#     - type: graphite
+#       host: 192.168.99.100
+#       port: 2003
+#       prefix: tests-cucumber
