--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,4 @@ jdk:
 before_install:
   - gem install compass
   - npm install -g grunt bower
-  - "(cd tests-cucumber-ui && bower install)"
-  - ./gradlew nodeSetup npmInstall installGrunt
+  - "(cd tests-cucumber-ui && npm install && bower install)"
