Submit comments from a scenario result

--- a/tests-cucumber-backend/backend-config.yml
+++ b/tests-cucumber-backend/backend-config.yml
@@ -12,7 +12,8 @@ logging:
   level: INFO
 
   loggers:
-    "example": DEBUG
+    "io.dropwizard": DEBUG
+    "io.testscucumber": DEBUG
 
 # metrics:
 #   frequency: 1 minute
