--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,7 @@ allprojects {
         guava             : '19.0',
         hibernateValidator: '5.2.2.Final',
         junit             : '4.12',
-        assertj           : '3.2.0',
+        assertj           : '3.3.0',
         mockito           : '1.10.19',
     ]
 
@@ -81,7 +81,7 @@ allprojects {
             tasks.withType(Checkstyle) {
                 reports {
                     xml.enabled = false
-                    // html.enabled = true // FIXME Disabled because of bugs in IntelliJ Gradle import
+                    // html.enabled = true // TODO Disabled because of bugs in IntelliJ Gradle import
                 }
             }
 
@@ -128,11 +128,18 @@ allprojects {
 
         }
 
-        // Replace commons logging by slf4j, if present
         project.configurations.all {
 
+            // Replace commons logging by slf4j, if present
             resolutionStrategy.dependencySubstitution {
                 substitute module('commons-logging:commons-logging') with module("org.slf4j:jcl-over-slf4j:${project.versions.slf4j}")
+            }
+
+            // Override Jackson version
+            resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+                if (details.requested.group.startsWith('com.fasterxml.jackson')) {
+                    details.useVersion project.versions.jackson
+                }
             }
 
         }
