--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,13 @@ allprojects {
         mockito           : '1.10.19',
     ]
 
+    project.ext.replaceDependencyGroupVersion =  { DependencyResolveDetails details, String group, String version ->
+        if (details.requested.group == group || details.requested.group.startsWith(group + ".")) {
+            details.useVersion version
+        }
+    }
+
+
     // Maven plugin
 
     project.afterEvaluate {
@@ -135,11 +142,10 @@ allprojects {
                 substitute module('commons-logging:commons-logging') with module("org.slf4j:jcl-over-slf4j:${project.versions.slf4j}")
             }
 
-            // Override Jackson version
+            // Override some dependency versions
             resolutionStrategy.eachDependency { DependencyResolveDetails details ->
-                if (details.requested.group.startsWith('com.fasterxml.jackson')) {
-                    details.useVersion project.versions.jackson
-                }
+                project.replaceDependencyGroupVersion(details, 'com.fasterxml.jackson', project.versions.jackson)
+                project.replaceDependencyGroupVersion(details, 'org.slf4j', project.versions.slf4j)
             }
 
         }
