--- a/build.gradle
+++ b/build.gradle
@@ -162,6 +162,7 @@ project("${rootProject.name}-backend") {
         compile "io.dropwizard:dropwizard-metrics-graphite:${versions.dropwizard}"
         compile "ma.glasnost.orika:orika-core:${versions.orika}"
         compile "org.mongodb.morphia:morphia:${versions.morphia}"
+        compile "org.mongodb.morphia:morphia-logging-slf4j:${versions.morphia}"
         compile "org.slf4j:slf4j-api:${versions.slf4j}"
         compile "org.springframework:spring-context:${versions.spring}"
         compile "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${versions.jackson}"
